--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Home Page</h1>
+    
+    <div style="background-image: url('../firebase_image/firebase1.jpg');">
 </body>
 </html>
